CodeAgent: implement #10 (AC-1) (#11)
